wip on scroll driver

--- a/index.html
+++ b/index.html
@@ -294,6 +294,6 @@
     </div><!-- end #scene2_2 -->
   
   </div><!-- end .wrapper -->
-  
+  <script src="js/ScrollDriver.js"></script>
 </body>
 </html>
