--- a/timeline.html
+++ b/timeline.html
@@ -31,5 +31,62 @@
   <div id="act3"></div>
   <script src="js/underscore.js"></script>
   <script src="js/timeline.js"></script>
+  <script>
+  
+  time1 = new Timeline
+  time1.addAction(Action({
+
+    el: document.querySelector('#act1'),
+
+    delay: 0,
+
+    onEnter: function(){
+      console.log("Enter")
+    },
+
+    onProgress: function(e){
+      if (window.scrollY > 150){
+        this.exit()
+      }
+
+      var el = this.config.el
+      window.requestAnimationFrame(function(){
+        el.style['-webkit-transform'] = 'translateY(' +  window.scrollY * 1.5  + 'px)'
+      })
+
+      console.log("Progress")
+    },
+
+    onExit: function(e){
+      console.log("Exit")
+    }
+  }))
+
+  time1.addAction(Action({
+    el: document.querySelector('#act2'),
+    delay: 0,           
+
+    onEnter: function(){
+      console.log('#2 Enter')
+    },
+
+    onProgress: function(e){
+
+      if (window.scrollY < 150 || window.scrollY > 550){
+        console.log('#2 Exit')
+        this.exit()
+        return
+      }
+
+      var el = this.config.el
+      window.requestAnimationFrame(function(){
+        el.style['-webkit-transform'] = 'translateX(' +  window.scrollY * 0.5  + 'px)'
+      })
+    }
+  }))
+
+  time1.play()
+  
+  </script>
 </body>
 </html>
