shape for cat scene act2

--- a/index.html
+++ b/index.html
@@ -153,14 +153,16 @@
 
         <div class="act act2">
           <div class="cat-shape cat-shape-walking"></div>
-
-          <p>
-            Alice was beginning to get very tired of sitting by her sister on the
-            bank, and of having nothing to do: once or twice she had peeped into the
-            book her sister was reading, but it had no pictures or conversations in
-            it, 'and what is the use of a book,' thought Alice 'without pictures or
-            conversation?'
-          </p>
+          
+          <div class="content-wrapper">
+            <p>
+              Alice was beginning to get very tired of sitting by her sister on the
+              bank, and of having nothing to do: once or twice she had peeped into the
+              book her sister was reading, but it had no pictures or conversations in
+              it, 'and what is the use of a book,' thought Alice 'without pictures or
+              conversation?'
+            </p>
+          </div>
         </div>
         <div class="act act3">
           <div class="alice-shape"></div>
