persistent shadows caterpillar scene

--- a/index.html
+++ b/index.html
@@ -81,10 +81,13 @@
         
         <!-- caterpillar night act -->
         <div class="act2">
+          <div class="shadow shadow1"></div>
+          <div class="shadow shadow2"></div>
+          <div class="shadow shadow3"></div>
           <div class="caterpillar-shape"></div>
         </div>
 
-        <!-- caterpillar night act -->
+        <!-- caterpillar day act -->
         <div class="act3">
           <div class="caterpillar-shape"></div>
         </div>
