--- a/index.html
+++ b/index.html
@@ -388,5 +388,10 @@
     </div><!-- end #scene2_2 -->
   
   </div><!-- end .wrapper -->
+  <script src="third-party/greensock/TweenMax.min.js"></script>
+  <script src="third-party/jquery/jquery-2.0.3.min.js"></script>
+	<script src="third-party/superscrollorama/jquery.superscrollorama.js"></script>
+	<script src="js/scroll-driver.js"></script>
+  
 </body>
 </html>
