externalize overlay definition

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
   <link rel="stylesheet" type="text/css" href="css/style.css" media="all" />
 </head>
 <body>
+
+  <!-- overlay for fade to black -->
+  <div id="overlay"></div> 
   
   <div class="wrapper">
-    
-    <div id="trans" class="hidden"></div> 
     
     <div id="scene1">
       <div class="content">
