--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
   <div id="overlay"></div> 
 
   <!-- keyframes for use by scroll driver -->
-  <div id="timeline">
-  </div>
+  <div id="timeline"></div>
   
   <div class="wrapper">
     
