cat walking keyframe and shape

--- a/index.html
+++ b/index.html
@@ -176,12 +176,14 @@
           <div class="content-wrapper">
             <p>
               'In THAT direction,' the Cat said, waving its right paw round, 'lives a Hatter: and in THAT direction,' waving the other paw, 'lives a March Hare. Visit either you like: they're both mad.'
-              <br />'But I don't want to go among mad people,' Alice remarked. 
-              <br />'Oh, you can't help that,' said the Cat: 'we're all mad here. I'm mad. You're mad.'
+              'But I don't want to go among mad people,' Alice remarked. 
+              'Oh, you can't help that,' said the Cat: 'we're all mad here. I'm mad. You're mad.'
              </p>
              <p>
                'Call it what you like,' said the Cat. 'Do you play croquet with the Queen to-day?'
                'I should like it very much,' said Alice, 'but I haven't been invited yet.'
+             </p>
+             <p>
                'You'll see me there,' said the Cat, and vanished.
              </p>
           </div>
