--- a/index.html
+++ b/index.html
@@ -83,28 +83,38 @@
         </div>
 
         <div class="dialogue dialogue1">
-          <p class="caterpillar-speech">Who are YOU?</p>
-          <p class="alice-speech">I—I hardly know, sir, just at present—at least I know who I WAS when I got up this morning, but I think I must have been changed several times since then.</p>
+          <div class="caterpillar">
+            <p>'You!' said the Caterpillar contemptuously. 'Who are YOU?'</p>
+          </div>
+          <p class="alice">I—I hardly know, sir, just at present—at least I know who I WAS when I got up this morning, but I think I must have been changed several times since then.</p>
         </div>
 
         <div class="dialogue dialogue2">
-          <p class="caterpillar-speech">What do you mean by that? Explain yourself!</p>
-          <p class="alice-speech">I'm afraid I can't put it more clearly for I can't understand it myself to begin with; and being so many different sizes in a day is very confusing.</p>
+          <div class="caterpillar">
+            <p>'What do you mean by that?' said the Caterpillar sternly. 'Explain yourself!'</p>
+          </div>
+          <p class="alice">I'm afraid I can't put it more clearly for I can't understand it myself to begin with; and being so many different sizes in a day is very confusing.</p>
         </div>
 
         <div class="dialogue dialogue3">
-          <p class="caterpillar-speech">So you think you're changed, do you?</p>
-          <p class="alice-speech">I'm afraid I am, sir. I can't remember things as I used—and I don't keep the same size for ten minutes together!</p>
+          <div class="caterpillar">
+            <p>For some minutes it puffed away without speaking, but at last it unfolded its arms, took the hookah out of its mouth again, and said, 'So you think you're changed, do you?'</p>
+          </div>
+          <p class="alice">I'm afraid I am, sir. I can't remember things as I used—and I don't keep the same size for ten minutes together!</p>
         </div>
 
         <div class="dialogue dialogue4">
-          <p class="caterpillar-speech">What size do you want to be?</p>
-          <p class="alice-speech">Oh, I'm not particular as to size; only one doesn't like changing so often, you know.</p>
+          <div class="caterpillar">
+             <p>What size do you want to be?</p>
+          </div>
+          <p class="alice">Oh, I'm not particular as to size; only one doesn't like changing so often, you know.</p>
         </div>
 
         <div class="dialogue dialogue5">
-          <p class="caterpillar-speech">One side will make you grow taller, and the other side will make you grow shorter.</p>
-          <p class="alice-speech">One side of WHAT? The other side of WHAT?</p>
+          <div class="caterpillar">
+            <p>One side will make you grow taller, and the other side will make you grow shorter.</p>
+          </div>
+          <p class="alice">One side of WHAT? The other side of WHAT?</p>
         </div>
 
       </div>
