animated dialogue scenes

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
         <div class="dialogue dialogue3">
           <div class="caterpillar">
-            <p>For some minutes it puffed away without speaking, but at last it unfolded its arms, took the hookah out of its mouth again, and said, 'So you think you're changed, do you?'</p>
+            <p>So you think you're changed, do you?</p>
           </div>
           <p class="alice">I'm afraid I am, sir. I can't remember things as I used—and I don't keep the same size for ten minutes together!</p>
         </div>
