--- a/index.html
+++ b/index.html
@@ -159,9 +159,7 @@
           'You don't know much,' said the Duchess; 'and that's a fact.'
           <br /><br />
           Alice did not at all like the tone of this remark, and thought it would be as well to introduce some other subject of conversation.
-          
-          <br /><br />
-          While she was trying to fix on one, the cook took the cauldron of soup off the fire, and at once set to work throwing everything within her reach at the Duchess and the baby—the fire-irons came first; then followed a shower of saucepans, plates, and dishes. The Duchess took no notice of them even when they hit her; and the baby was howling so much already, that it was quite impossible to say whether the blows hurt it or not.
+          <!-- While she was trying to fix on one, the cook took the cauldron of soup off the fire, and at once set to work throwing everything within her reach at the Duchess and the baby—the fire-irons came first; then followed a shower of saucepans, plates, and dishes. The Duchess took no notice of them even when they hit her; and the baby was howling so much already, that it was quite impossible to say whether the blows hurt it or not. -->
         </p>
 
       </div>
