--- a/index.html
+++ b/index.html
@@ -273,6 +273,13 @@
   <script src="third-party/jquery/jquery-2.0.3.min.js"></script>
 	<script src="third-party/superscrollorama/jquery.superscrollorama.js"></script>
 	<script src="js/scroll-driver.js"></script>
+	<script>
+  	(function(){
+  	  window.setTimeout(function(){
+    	  window.scrollTo(0,0)
+  	  }, 150)
+  	})()
+	</script>
   
 </body>
 </html>
