--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
   
   <!-- introduction slide and feature detect message -->
   <div id="intro">
-    <header>Demo for Alice in Wonderland</header>
+    <header>Demo for Alice in Wonderland <span class="no-break">by Lewis Carroll</span></header>
     <p>
-      A showcase of using CSS Shapes to enhance visual storytelling.
+      Using <a href="http://html.adobe.com/webplatform/layout/shapes/" target="_blank">CSS Shapes</a> to enhance visual storytelling.
     </p>
     <div class="warning">
       <p>
-        This example demonstrates cutting-edge features that the <a href="http://html.adobe.com/webplatform/">Adobe Web Platform Team</a> is working on. To see these features in action, <a href="http://html.adobe.com/webplatform/enable/">enable CSS Regions and CSS Shapes</a> in browsers that support them: <a href="http://html.adobe.com/webplatform/layout/regions/browser-support/">CSS Regions Support Matrix</a>, <a href="http://html.adobe.com/webplatform/layout/shapes/browser-support/">CSS Shapes Support Matrix</a>.
+        This example demonstrates cutting-edge features that the <a href="http://html.adobe.com/webplatform/" target="_blank">Adobe Web Platform Team</a> is working on. To see these features in action, <a href="http://html.adobe.com/webplatform/enable/" target="_blank">enable CSS Regions and CSS Shapes</a> in browsers that support them: <a href="http://html.adobe.com/webplatform/layout/regions/browser-support/" target="_blank">CSS Regions Support Matrix</a>, <a href="http://html.adobe.com/webplatform/layout/shapes/browser-support/" target="_blank">CSS Shapes Support Matrix</a>.
       </p>
     </div>
     
