open links in new tabs

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
       </div><em>scroll to begin</em>
     </div>      
     <footer>
-      <a href="http://html.adobe.com" class="adobe-logo">html.adobe.com</a>
-      <a href="http://ultranoir.com" class="ultranoir-logo">ultranoir.com</a>
+      <a href="http://html.adobe.com" class="adobe-logo" target="_blank">html.adobe.com</a>
+      <a href="http://ultranoir.com" class="ultranoir-logo" target="_blank">ultranoir.com</a>
     </footer>
   </div>
   
