--- a/index.html
+++ b/index.html
@@ -243,18 +243,22 @@
           <div class="content-wrapper">
             
             <div class="cat-head">
-              <div class="state state-head-1"></div>
-              <div class="state state-head-2"></div>
-              <div class="state state-head-3"></div>
-              <div class="state state-head-4"></div>
-              <div class="state state-head-5"></div>
-              <div class="state state-head-6"></div>
-              <div class="state state-head-7"></div>
-              <div class="state state-head-8"></div>
-              <div class="state state-smiling-1"></div>
+              <div class="state state-1"></div>
+              <div class="state state-2"></div>
+              <div class="state state-3"></div>
+              <div class="state state-4"></div>
+              <div class="state state-5"></div>
+              <div class="state state-6"></div>
+              <div class="state state-7"></div>
+              <div class="state state-8"></div>
+              <div class="state state-9"></div>
+              <div class="state state-10"></div>
+              <div class="state state-11"></div>
+              <div class="state state-12"></div>
+              <!-- <div class="state state-smiling-1"></div>
               <div class="state state-smiling-2"></div>
               <div class="state state-smiling-3"></div>
-              <div class="state state-smiling-4"></div>
+              <div class="state state-smiling-4"></div> -->
             </div>
             
             <p>
