--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
 <head>
-  <title>CSS Shapes | Demo for Alice's Adventures in Wonderland, by Lewis Carroll</title>
+  <title>Demo for Alice's Adventures in Wonderland, by Lewis Carroll</title>
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="css/style.css" media="all" />
 </head>
