--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <!-- introduction slide and feature detect message -->
   <div id="intro">
-    <header>Demo for Alice in Wonderland <span class="no-break">by Lewis Carroll</span></header>
+    <header>Demo for Alice in Wonderland <span>by Lewis Carroll</span></header>
     <p>
       Using <a href="http://html.adobe.com/webplatform/layout/shapes/" target="_blank">CSS Shapes</a> to enhance visual storytelling.
     </p>
