make people use Canary

--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
     </p>
     <div class="warning">
       <p>
-        This example demonstrates cutting-edge features that the <a href="http://html.adobe.com/webplatform/" target="_blank">Adobe Web Platform Team</a> is working on. To see these features in action, <a href="http://html.adobe.com/webplatform/enable/" target="_blank">enable CSS Regions and CSS Shapes</a> in browsers that support them: <a href="http://html.adobe.com/webplatform/layout/regions/browser-support/" target="_blank">CSS Regions Support Matrix</a>, <a href="http://html.adobe.com/webplatform/layout/shapes/browser-support/" target="_blank">CSS Shapes Support Matrix</a>.
+        This example demonstrates cutting-edge features that the <a href="http://html.adobe.com/webplatform/" target="_blank">Adobe Web Platform Team</a> is working on. To see these features in action, <a href="http://html.adobe.com/webplatform/enable/" target="_blank">enable CSS Regions and CSS Shapes</a> in the <a href="https://www.google.com/intl/en/chrome/browser/canary.html">Google Chrome Canary</a> browser.
+        <br /><br />
+        <a href="http://html.adobe.com/webplatform/layout/regions/browser-support/" target="_blank">CSS Regions Support Matrix</a>, <a href="http://html.adobe.com/webplatform/layout/shapes/browser-support/" target="_blank">CSS Shapes Support Matrix</a>.
+        
       </p>
     </div>
 
