remove CSS Regions dependency

--- a/index.html
+++ b/index.html
@@ -24,10 +24,8 @@
     </p>
     <div class="warning">
       <p>
-        This example demonstrates cutting-edge features that the <a href="http://html.adobe.com/webplatform/" target="_blank">Adobe Web Platform Team</a> is working on. To see these features in action, <a href="http://html.adobe.com/webplatform/enable/" target="_blank">enable CSS Regions and CSS Shapes</a> in the <a href="https://www.google.com/intl/en/chrome/browser/canary.html">Google Chrome Canary</a> browser.
-        <br /><br />
-        <a href="http://html.adobe.com/webplatform/layout/regions/browser-support/" target="_blank">CSS Regions Support Matrix</a>, <a href="http://html.adobe.com/webplatform/layout/shapes/browser-support/" target="_blank">CSS Shapes Support Matrix</a>.
-        
+        This example demonstrates cutting-edge features that the <a href="http://html.adobe.com/webplatform/" target="_blank">Adobe Web Platform Team</a> is working on. To see these features in action, <a href="http://html.adobe.com/webplatform/enable/#section-chrome-canary" target="_blank">enable CSS Shapes</a> in the <a href="https://www.google.com/intl/en/chrome/browser/canary.html">Google Chrome Canary</a> browser.
+        <a href="http://html.adobe.com/webplatform/layout/shapes/browser-support/" target="_blank">CSS Shapes Support Matrix</a>.
       </p>
     </div>
 
@@ -246,21 +244,21 @@
               <div class="state state-12"></div>
             </div>
 
-            <p>
-              She was looking about for some way of escape, and wondering whether she could get away without being seen, when she noticed a curious appearance in the air: it puzzled her very much at first, but, after watching it a minute or two, she made it out to be a grin, and she said to herself 'It's the Cheshire Cat!'
-            </p>
-            <p>
-              'How are you getting on?' said the Cat, as soon as there was mouth enough for it to speak with.
-            </p>
-            <p>
-              Alice waited till the eyes appeared, and then nodded. 'It's no use speaking to it,' she thought, 'till its ears have come, or at least one of them.' In another minute the whole head appeared, and then Alice put down her flamingo, and began an account of the game.
-            </p>
-            <p>
-              'How do you like the Queen?' said the Cat in a low voice.
-            </p>
 
-            <div class="region" id="region1"></div>
-            <div class="region" id="region2"></div>
+            <div class="region" id="region1">
+              <p>
+                She was looking about for some way of escape, and wondering whether she could get away without being seen, when she noticed a curious appearance in the air: it puzzled her very much at first, but, after watching it a minute or two, she made it out to be a grin, and she said to herself 'It's the Cheshire Cat!'.
+                'How are you getting on?' said the Cat, as soon as there was mouth enough for it to speak with.
+              </p>
+            </div>
+            <div class="region" id="region2">
+              <p>
+                Alice waited till the eyes appeared, and then nodded. 'It's no use speaking to it,' she thought, 'till its ears have come, or at least one of them.' In another minute the whole head appeared, and then Alice put down her flamingo, and began an account of the game.
+              </p>
+              <p>
+                'How do you like the Queen?' said the Cat in a low voice.
+              </p>
+            </div>
             
           </div><!-- end .content-wrapper -->
         </div><!-- end .act6 -->
