--- a/index.html
+++ b/index.html
@@ -121,19 +121,19 @@
     })()
 
     // force scroll to top on reload
-    document.addEventListener('DOMContentLoaded', function(){
-      window.setTimeout(function(){
-        window.scrollTo(0,0)
-      }, 50);
-    });
+    // document.addEventListener('DOMContentLoaded', function(){
+    //   window.setTimeout(function(){
+    //     window.scrollTo(0,0)
+    //   }, 50);
+    // });
 
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-45111913-1', 'adobe-webplatform.github.io');
-    ga('send', 'pageview');
+    // (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    // (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    // m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    // })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    //
+    // ga('create', 'UA-45111913-1', 'adobe-webplatform.github.io');
+    // ga('send', 'pageview');
   </script>
 </body>
 </html>
