--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         })
     });
 
-    // Set the lenght of the timeline-track as the max limit timeline animations
+    // Set the length of the timeline-track as the max limit timeline animations
     (function(){
       var max = 0;
       timeline.forEach(function(t){
