--- a/index.html
+++ b/index.html
@@ -97,6 +97,11 @@
         window.requestAnimationFrame(function(){
           $sceneIntro.style['-webkit-filter'] = 'opacity(' + opacity + '%)';
           $sceneIntro.style['visibility'] = (opacity === 0) ? 'hidden' : 'visible';
+
+          // remove this scene after the fade-out
+          if (opacity === 0){
+            timeline.splice(0,1);
+          }
         });
       }
     });
