--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Demo for Alice's Adventures in Wonderland, by Lewis Carroll</title>
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="css/style.css" media="all" />
+  <script src="//use.edgefonts.net/cardo:n4.js"></script>
 </head>
 <body>
   <div class="timeline-track js-timeline-track"></div>
@@ -67,7 +68,6 @@
     </div>
 
   </div><!-- end .wrapper -->
-
   <script>
 
   (function(){
@@ -245,15 +245,6 @@
 
   </script>
   <script>
-    (function(){
-      // typekit asyc loading
-      var config = {
-        kitId: 'fwk6qwz',
-        scriptTimeout: 1500
-      };
-      var h=document.getElementsByTagName("html")[0];h.className+=" wf-loading";var t=setTimeout(function(){h.className=h.className.replace(/(\s|^)wf-loading(\s|$)/g," ");h.className+=" wf-inactive"},config.scriptTimeout);var tk=document.createElement("script"),d=false;tk.src='//use.typekit.net/'+config.kitId+'.js';tk.type="text/javascript";tk.async="true";tk.onload=tk.onreadystatechange=function(){var a=this.readyState;if(d||a&&a!="complete"&&a!="loaded")return;d=true;clearTimeout(t);try{Typekit.load(config)}catch(b){}};var s=document.getElementsByTagName("script")[0];s.parentNode.insertBefore(tk,s)
-    })();
-
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
